--- a/frontend/views/clientes/formularioCliente.html
+++ b/frontend/views/clientes/formularioCliente.html
@@ -18,14 +18,14 @@
       <button style="width:15em;" class="limpiar" ng-click="limpiarClientesBusq()">Limpiar consulta</button>  
       <br />
       <br />  
-      <button style="width:15em;" class="crear_cliente" ng-click="showClientsCreate()">Gesti&oacute;n cliente</button>
+      <button style="width:15em;" class="crear_cliente" ng-click="showClientsCreate()">Crear cliente</button>
       <br />
       <br />
       <button style="width:15em;" class="volver" ng-click="returnMenuIndex()");return false">Volver</button></center>
     </form>
   </div>
   <div class="form1" ng-show="cant_clie_busq=='0'">
-    <center><h2 style="font-family:Verdana;">CONSULTA CLIENTES</h2></center>       
+    <center><h2 style="font-family:Verdana;">CLIENTES</h2></center>       
     <div class="container">    
       <div class="panel panel-default">
         <div class="panel-body">
