--- a/frontend/views/clientes/formularioGestionCliente.html
+++ b/frontend/views/clientes/formularioGestionCliente.html
@@ -3,7 +3,7 @@
     <div class="tooltip1" style="color:black;width:8em;font-weight:bold;font-family:Verdana;font-size:1em;left:-6em;position:absolute;"><a ng-click="closeSession()">Cerrar sesi&oacute;n</a></div>
   </div>
   <div class="form">
-    <center><h2 style="font-family:Verdana;">GESTI&Oacute;N CLIENTES</h2></center>
+    <center><h2 style="font-family:Verdana;">DATOS CLIENTE</h2></center>
     <br />
     <form name="formularioCliente" ng-model="cliente" id="formularioCliente" method="post" NOVALIDATE>
       <label>Tipo cliente (*)</label>
