--- a/frontend/views/menuPrincipal/formularioMenu1.html
+++ b/frontend/views/menuPrincipal/formularioMenu1.html
@@ -46,9 +46,9 @@
       <!--label>Login</label><input name="login" type="text" placeholder="Login"/>
       <label>Contrase&ntilde;a</label><input name="password" type="password" placeholder="Contrase&ntilde;a"/-->
       <center>
-        <button class="cotizaciones" style="width:15em;" href="#" onclick="ajax_loadContent('formulario','formularioCotizacion.php');return false">Solicitudes</button><br /><br />
+        <button class="cotizaciones" style="width:15em;" ng-click="showSolicitudesIndex()">Solicitudes</button><br /><br />
         <button class="productos" style="width:15em;" ng-click="showClientsIndex()">Clientes</button><br /><br />
-        <button class="cotizaciones" style="width:15em;" ng-click="showInmueblesIndex()">Inmuebles</button><br /><br />        
+        <button class="cotizaciones" style="width:15em;" ng-click="showInmueblesIndex()">Inmuebles</button><br /><br />       
         <button class="productos" style="width:15em;" ng-click="showAdministracionIndex()">Administraci&oacute;n</button>
       </center>
     </form>
