--- a/frontend/views/clientes/formularioCliente.html
+++ b/frontend/views/clientes/formularioCliente.html
@@ -60,7 +60,7 @@
       <br />
       <br />
       <br />
-      <center><button style="width:15em;" class="volver" ng-click="volverBusqClientes()">Nueva B&uacute;squeda</button></center>
+      <center><button style="width:15em;" class="volver" ng-click="volverBusqClientes()">Volver</button></center>
     </div>
   </div>  
   <div class="cta">SONIA<br />Sistema Organizador de Negocios Inmobiliarios Asistidos<br />
