--- a/frontend/views/inmuebles/formularioInmueble.html
+++ b/frontend/views/inmuebles/formularioInmueble.html
@@ -6,13 +6,16 @@
     <br />
     <form name="formularioInmueble" id="formularioInmueble" ng-model="formularioInmueble" method="post" NOVALIDATE>
       <label>Pa&iacute;s</label>
-      <select name="inmueble_codigoPais" id="codigoPais" ng-options="id_pais as id_pais.name for id_pais in ids_paises track by id_pais.id_pais" ng-model="inmueble.codigoPais" ng-change="getDepartamentos(inmueble.codigoPais)" ng-init="getPaises()"/>        
+      <select name="inmueble_codigoPais" id="codigoPais" ng-options="id_pais as id_pais.name for id_pais in ids_paises track by id_pais.id_pais" ng-model="inmueble.codigoPais" ng-change="getDepartamentos(inmueble.codigoPais)" ng-init="getPaises()"/>  
+        <option label="Seleccione" value="">Sin&nbsp;informaci&oacute;n</option>      
       </select>
       <label>Departamento</label>
       <select name="inmueble_departamento" ng-options="id_departamento as id_departamento.name for id_departamento in ids_departamentos track by id_departamento.id_departamento" ng-change="getCiudades(inmueble.codigoDepartamento)" ng-model="inmueble.codigoDepartamento"/>
+        <option label="Seleccione" value="">Sin&nbsp;informaci&oacute;n</option>
       </select>
       <label>Ciudad</label>
-      <select name="inmueble_ciudad" ng-options="id_ciudad as id_ciudad.name for id_ciudad in ids_ciudades track by id_ciudad.id_ciudad" ng-model="inmueble.codigoCiudad" ng-change="getZonasSectores(inmueble.codigoCiudad)"/>        
+      <select name="inmueble_ciudad" ng-options="id_ciudad as id_ciudad.name for id_ciudad in ids_ciudades track by id_ciudad.id_ciudad" ng-model="inmueble.codigoCiudad" ng-change="getZonasSectores(inmueble.codigoCiudad)"/> 
+        <option label="Seleccione" value="">Sin&nbsp;informaci&oacute;n</option>       
       </select>      
       <label ng-if="inmueble.codigoCiudad.id_ciudad=='132'">Sector&nbsp;/&nbsp;Zona</label>
       <select ng-if="inmueble.codigoCiudad.id_ciudad=='132'" name="inmueble_sector" ng-options="id_sector as id_sector.name for id_sector in ids_sectores track by id_sector.id_sector" ng-change="listarBarriosZona1(inmueble.codigoSector.id_sector,inmueble.codigoCiudad.id_ciudad)" ng-model="inmueble.codigoSector"/> 
@@ -20,7 +23,7 @@
       </select>
       <label ng-if="inmueble.codigoCiudad.id_ciudad=='132'">Estrato</label>
       <select name="inmueble_codigoEstratoCali" ng-if="inmueble.codigoCiudad.id_ciudad=='132'" ng-options="id_estrato as id_estrato.nombre for id_estrato in lista_estratos_cali track by id_estrato.codigo" ng-disabled="inmueble.codigoSector" ng-change="getLocEstCali(inmueble.codigoEstrato)" ng-model="inmueble.codigoEstrato"/>
-        <option value="" label="Seleccione">Sin&nbsp;informaci&oacute;n</option>     
+        <option value="" label="Seleccione">Sin&nbsp;informaci&oacute;n</option>            
       </select>
       <label ng-if="inmueble.codigoCiudad.id_ciudad=='132'||inmueble.codigoCiudad.id_ciudad=='794'">Localidad / Comuna</label>
       <select name="inmueble_zona" ng-if="inmueble.codigoCiudad.id_ciudad=='794'" ng-options="id_zona as id_zona.name for id_zona in ids_zonas track by id_zona.id_zona" ng-model="inmueble.codigoZona"/> 
@@ -31,16 +34,46 @@
       </select>   
       <label ng-if="inmueble.codigoCiudad.id_ciudad=='132'">Barrio</label>
       <select name="inmueble_barrio" ng-if="inmueble.codigoCiudad.id_ciudad=='132'" ng-options="id_barrio as id_barrio.nombre for id_barrio in barrios_comunas_cali track by id_barrio.codigo" ng-change="getEstratoComunaCali(inmueble.codigoBarrio)" ng-model="inmueble.codigoBarrio"/> 
-        <!--option value="" label="Seleccione">Seleccione</option-->        
+        <!--option value="" label="Seleccione">Sin&nbsp;informaci&oacute;n</option-->        
       </select>   
       <label>Tipo inmueble</label>
       <select name="inmueble_tipo_inmueble" ng-options="id_tipo_inmueble as id_tipo_inmueble.name for id_tipo_inmueble in ids_tipo_inmuebles track by id_tipo_inmueble.id_tipo_inmueble" ng-model="inmueble.tipoInmueble" ng-change="getCaracteristicasTiposInmuebles(inmueble.tipoInmueble.id_tipo_inmueble,inmueble.tipoInmueble.name)" ng-init="getTiposInmuebles()"/>  
+        <option label="Seleccione" value="">Sin&nbsp;informaci&oacute;n</option> 
       </select> 
-      <label>&Aacute;rea&nbsp;(m2)</label><input name="inmueble_area" type="number" ng-model="inmueble.area"/>      
-      <label>Moneda</label>
-      <select name="inmueble_moneda" ng-options="id_moneda as id_moneda.denominacion for id_moneda in ids_monedas track by id_moneda.id_moneda" ng-model="inmueble.moneda" ng-init="getMonedas()" ng-change="getConversionPesos(inmueble.moneda.id_moneda)"/>     
+      <label ng-if="consultarInmuebles=='0'">T&iacute;tulo publicaci&oacute;n</label><input ng-if="consultarInmuebles=='0'" name="inmueble_titulo" id="inmueble_titulo" ng-model="inmueble.titulo" type="text"/>
+      <label>Condición</label>
+      <select name="inmueble_condicion" ng-model="inmueble.condicion" />    
+        <option value="" label="Seleccione">Sin&nbsp;informaci&oacute;n</option>     
+        <option value="1" label="Nuevo">Nuevo</option>  
+        <option value="2" label="Usado">Usado</option>  
+      </select>  
+      <label>&Aacute;reas o hect&aacute;reas</label><input name="inmueble_area" type="number" ng-model="inmueble.area"/> 
+      <label ng-if="1==0">Prioridad o urgencia de negocio</label>
+      <select ng-if="1==0" name="inmueble_prioridad" ng-options="id_prioridad as id_prioridad.descripcion for id_prioridad in ids_prioridades track by id_prioridad.id_prioridad" ng-model="inmueble.prioridad" ng-init="getPrioridades()"/>     
       </select>
-      <label ng-if="inmueble.moneda">{{conversion_pesos}}</label>   
+      <label ng-if="1==0">Forma de pago</label>
+      <select name="inmueble_forma_pago" ng-if="1==0" ng-options="id_forma_pago as id_forma_pago.descripcion for id_forma_pago in ids_formas_pago track by id_forma_pago.id_forma_pago" ng-model="inmueble.forma_pago" ng-init="getFormasPago()"/>     
+      </select>     
+      <label>Moneda</label>
+      <select name="inmueble_moneda" ng-options="id_moneda as id_moneda.denominacion for id_moneda in ids_monedas track by id_moneda.id_moneda" ng-model="inmueble.moneda" ng-init="getMonedas()" ng-change="getConversionPesos(inmueble.moneda.id_moneda)"/>  
+        <option label="Seleccione" value="">Sin&nbsp;informaci&oacute;n</option>    
+      </select>
+      <label ng-if="inmueble.moneda">{{conversion_pesos}}</label>  
+      <label ng-if="consultarInmuebles=='0'">Precio inmueble</label><input name="inmueble_precio" ng-if="consultarInmuebles=='0'" type="number" ng-model="inmueble.precio"/>
+      <label ng-if="consultarInmuebles=='1'">Rango de precios</label>    
+      <label class="switch" ng-if="consultarInmuebles=='1'">
+        <input type="checkbox" id="inmueble_rango_precios" name="inmueble_rango_precios" ng-change="cambiarValorRangosPrecios()" ng-model="inmueble.rango_precios">
+        <span style="width: 4.5em;" class="slider round"></span>
+      </label>  
+      <label ng-if="inmueble.rango_precios">Precio inicial (*)</label><input name="inmueble_precio_inicial" ng-if="inmueble.rango_precios" type="number" ng-model="inmueble.precio_inicial"/> 
+      <label ng-if="inmueble.rango_precios">Precio final (*)</label><input name="inmueble_precio_final" ng-if="inmueble.rango_precios" type="number" ng-model="inmueble.precio_final"/> 
+      <label ng-if="consultarInmuebles=='1'">Rango de fechas de publicaci&oacute;n</label>    
+      <label class="switch" ng-if="consultarInmuebles=='1'">
+        <input type="checkbox" id="inmueble_rango_fechas" name="inmueble_rango_fechas" ng-change="cambiarValorRangosFechas()" ng-model="inmueble.rango_fechas">
+        <span style="width: 4.5em;" class="slider round"></span>
+      </label>
+      <label ng-if="inmueble.rango_fechas">Fecha inicial (*)</label><input name="inmueble_fecha_inicial" ng-if="inmueble.rango_fechas" type="date" ng-model="inmueble.fecha_inicial"/> 
+      <label ng-if="inmueble.rango_fechas">Fecha final (*)</label><input name="inmueble_fecha_final" ng-if="inmueble.rango_fechas" type="date" ng-model="inmueble.fecha_final"/> 
       <br />
       <center ng-if="cant_caract_inm!='0'"><label style="font-weight: bolder;font-size: 16px;">Caracter&iacute;sticas</label></center>       
       <table ng-init='configPages1()' style="width: 70%;" ng-if="cant_caract_inm_obl!='0'">            
@@ -88,21 +121,20 @@
               </tr>
             </tbody>
           </table> 
-      <br ng-if="cant_caract_inm_obl_show!='0'" />  
-      <label>Rango de precios</label>    
-      <label class="switch">
-        <input type="checkbox" id="inmueble_rango_precios" name="inmueble_rango_precios" ng-change="cambiarValorRangosPrecios()" ng-model="inmueble.rango_precios">
-        <span style="width: 4.5em;" class="slider round"></span>
-      </label>  
-      <label ng-if="inmueble.rango_precios">Precio inicial (*)</label><input name="inmueble_precio_inicial" ng-if="inmueble.rango_precios" type="number" ng-model="inmueble.precio_inicial"/> 
-      <label ng-if="inmueble.rango_precios">Precio final (*)</label><input name="inmueble_precio_final" ng-if="inmueble.rango_precios" type="number" ng-model="inmueble.precio_final"/> 
-      <label>Rango de fechas de publicaci&oacute;n</label>    
-      <label class="switch">
-        <input type="checkbox" id="inmueble_rango_fechas" name="inmueble_rango_fechas" ng-change="cambiarValorRangosFechas()" ng-model="inmueble.rango_fechas">
-        <span style="width: 4.5em;" class="slider round"></span>
-      </label>
-      <label ng-if="inmueble.rango_fechas">Fecha inicial (*)</label><input name="inmueble_fecha_inicial" ng-if="inmueble.rango_fechas" type="date" ng-model="inmueble.fecha_inicial"/> 
-      <label ng-if="inmueble.rango_fechas">Fecha final (*)</label><input name="inmueble_fecha_final" ng-if="inmueble.rango_fechas" type="date" ng-model="inmueble.fecha_final"/> 
+
+      <label ng-if="inmueble.tipoInmueble.id_tipo_inmueble&&inmueble.tipoInmueble.id_tipo_inmueble!='5'&&inmueble.tipoInmueble.id_tipo_inmueble!='32'">Cantidad habitaciones</label><input ng-if="inmueble.tipoInmueble.id_tipo_inmueble&&inmueble.tipoInmueble.id_tipo_inmueble!='5'&&inmueble.tipoInmueble.id_tipo_inmueble!='32'" name="inmueble_habitaciones" id="inmueble_habitaciones" ng-model="inmueble.habitaciones" type="number"/>    
+      <label ng-if="inmueble.tipoInmueble.id_tipo_inmueble&&inmueble.tipoInmueble.id_tipo_inmueble!='5'&&inmueble.tipoInmueble.id_tipo_inmueble!='32'">Cantidad ba&ntilde;os</label><input ng-if="inmueble.tipoInmueble.id_tipo_inmueble&&inmueble.tipoInmueble.id_tipo_inmueble!='5'&&inmueble.tipoInmueble.id_tipo_inmueble!='32'" name="inmueble_banos" id="inmueble_banos" ng-model="inmueble.banos" type="number"/>    
+      <label ng-if="inmueble.tipoInmueble.id_tipo_inmueble&&inmueble.tipoInmueble.id_tipo_inmueble!='5'&&inmueble.tipoInmueble.id_tipo_inmueble!='32'">Parqueaderos o garajes</label><input ng-if="inmueble.tipoInmueble.id_tipo_inmueble&&inmueble.tipoInmueble.id_tipo_inmueble!='5'&&inmueble.tipoInmueble.id_tipo_inmueble!='32'" name="inmueble_parqueadero" id="inmueble_parqueadero" ng-model="inmueble.parqueadero" type="number"/> 
+      <label ng-if="inmueble.tipoInmueble.id_tipo_inmueble&&inmueble.tipoInmueble.id_tipo_inmueble!='5'&&inmueble.tipoInmueble.id_tipo_inmueble!='32'">Piso o cantidad de pisos</label><input ng-if="inmueble.tipoInmueble.id_tipo_inmueble&&inmueble.tipoInmueble.id_tipo_inmueble!='5'&&inmueble.tipoInmueble.id_tipo_inmueble!='32'" name="inmueble_piso" id="inmueble_piso" ng-model="inmueble.piso" type="number"/>
+      <label ng-if="consultarInmuebles=='1'">Estado</label>
+      <select ng-if="consultarInmuebles=='1'" ng-options="id_estado as id_estado.nombre for id_estado in estados_inmueble track by id_estado.id_estado" name="inmueble_estado" id="inmueble_estado" ng-model="inmueble.estado" />          
+        <option label="Seleccione" value="">Sin&nbsp;informaci&oacute;n</option>  
+      </select>
+      <label ng-if="consultarInmuebles=='0'">Observaciones o descripci&oacute;n</label>
+      <textarea name="inmueble_observaciones" ng-if="consultarInmuebles=='0'" ng-model="inmueble.observaciones"></textarea>   
+      <label ng-if="consultarInmuebles=='0'">Comentario adicional</label>
+      <textarea ng-if="consultarInmuebles=='0'" name="inmueble_comentario" ng-model="inmueble.comentario"></textarea>  
+      <!--br ng-if="cant_caract_inm_obl_show!='0'" /-->       
       <br />  
       <center><button style="width:15em;" type="submit" class="consultar" ng-click="consultarInmueblesCaracteristicas()">Consultar</button>
       <br />
