--- a/frontend/views/inmuebles/formularioInmueble.html
+++ b/frontend/views/inmuebles/formularioInmueble.html
@@ -136,7 +136,7 @@
       <textarea ng-if="consultarInmuebles=='0'" name="inmueble_comentario" ng-model="inmueble.comentario"></textarea>  
       <!--br ng-if="cant_caract_inm_obl_show!='0'" /-->       
       <br />  
-      <center><button style="width:15em;" type="submit" class="consultar" ng-click="consultarInmueblesCaracteristicas()">Consultar</button>
+      <center><button style="width:15em;" type="submit" id="consultaInmuebles" class="consultar" ng-click="consultarInmueblesCaracteristicas()">Consultar</button>
       <br />
       <br />  
       <button style="width:15em;" class="limpiar" ng-click="limpiarCaracteristicasTipoInmueble()">Limpiar</button>
