--- a/frontend/views/menuPrincipal/formularioMenu.html
+++ b/frontend/views/menuPrincipal/formularioMenu.html
@@ -61,18 +61,20 @@
         //$scope.imgAsesorTemp = dataURL;
       };
       reader.readAsDataURL(input.files[0]);
-    };
+    };  
 
   </script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.7.2/angular.min.js"></script>
-  <script src="../../js/app.js"></script>
-  <script src="../../js/appImages.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
+  <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-sanitize.js"></script>
+  <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-animate.min.js"></script>
+  <script type="text/javascript" src="https://rawgit.com/dwmkerr/angular-modal-service/master/dst/angular-modal-service.js"></script>
+  <script src="../../js/app.js"></script>  
+  <!--script src="../../js/appImages.js"></script-->
   <script type="text/javascript" src="../../js/ajax.js"></script>
   <script type="text/javascript" src="../../js/ajax-dynamic-content.js"></script>
   <script type="text/javascript" src="../../js/jquery-3.3.1.js"></script>
-  <script type="text/javascript" src="../../js/jquery-3.3.1.min.js"></script>
+  <script type="text/javascript" src="../../js/jquery-3.3.1.min.js"></script>  
   <script type="text/javascript" src="../../js/bootstrap/bootstrap.min.js" crossorigin="anonymous"></script>
-
   <!--link rel="stylesheet" href="../../css/bootstrap/bootstrap.min.css" crossorigin="anonymous"-->
   <!-- <link rel="stylesheet" href="../../css/bootstrap-theme.min.css" crossorigin="anonymous"> -->
 
